--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,7 @@
 spring.datasource.url=jdbc:postgresql://pgserver.mau.se:5432/sop
-spring.datasource.username=an3760
-spring.datasource.password=khqjtfi9
+spring.datasource.username=sop
+spring.datasource.password=45ti1if8
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
-
-#ALTERNATIV ANVÄNDNING OM FATAL TOO MANY CONNECTIONS-MÖG:
-#spring.datasource.username=an3760
-#spring.datasource.password=khqjtfi9
-
-#ALTERNATIV DATABAS:
-#jdbc:postgresql://sop.postgres.database.azure.com:5432/sparaochpara?sslmode=require
-#anv.namn = sop
-#lösen = SparaOchPara!
