Alternative database (Azure) in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 #ALTERNATIV ANVÄNDNING OM FATAL TOO MANY CONNECTIONS-MÖG:
 #spring.datasource.username=an3760
 #spring.datasource.password=khqjtfi9
+
+#ALTERNATIV DATABAS:
+#jdbc:postgresql://sop.postgres.database.azure.com:5432/sparaochpara?sslmode=require
+#anv.namn = sop
+#lösen = SparaOchPara!
