--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://pgserver.mau.se:5432/sop
-spring.datasource.username=sop
-spring.datasource.password=45ti1if8
+spring.datasource.username=an3760
+spring.datasource.password=khqjtfi9
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
