--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
 			<artifactId>spring-security-crypto</artifactId>
 			<version>6.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
