--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
 					<skipTests>${tests.skip}</skipTests>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.3.0</version>
+			</plugin>
 		</plugins>
 	</build>
 
