-Switched to MS Azure DB in application.properties -Because of this, removed binary datatype for password in User class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://pgserver.mau.se:5432/sop
-spring.datasource.username=an3760
-spring.datasource.password=khqjtfi9
+spring.datasource.url=jdbc:postgresql://sop.postgres.database.azure.com:5432/sparaochpara?sslmode=require
+spring.datasource.username=sop
+spring.datasource.password=SparaOchPara!
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
