--- a/pom.xml
+++ b/pom.xml
@@ -75,19 +75,18 @@
 		  <artifactId>jquery</artifactId>
 		  <version>3.6.2</version>
 	  </dependency>
-	  <dependency>
-		  <groupId>javax.servlet</groupId>
-		  <artifactId>javax.servlet-api</artifactId>
-		  <version>4.0.1</version>
-		  <scope>provided</scope>
-	  </dependency>
-	  <dependency>
-		  <groupId>javax.servlet.jsp</groupId>
-		  <artifactId>javax.servlet.jsp-api</artifactId>
-		  <version>2.3.3</version>
-		  <scope>provided</scope>
-	  </dependency>
-	</dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.2-android</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
