--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Spara och Para Gr 28</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<maven.test.skip>true</maven.test.skip>
 		<tests.skip>true</tests.skip>
 	</properties>
